welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:20: error: type mismatch;
 found   : Unit
 required: Boolean
  	if (getDirection()==Direction.WEST){
        ^